modals: fix 'forward already forwarded message'
Thanks @RaitaroH for reporting this issue.

I couldn't reproduce this behavior on my end; to try it for yourself,
just forward already forwarded message and it should appear between
search bar and contact list.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -805,6 +805,8 @@
         .NWyjc.AZ3xD { margin: 16px }
         /// Left -> Show previews for notifications.
         /.cFkAx._2ojWN ._3FR9x { c: fg }
+        /// Forward already forwarded message.
+        /.vLVax { c: fg bd hl }
     }
 
     // Global -> Status.
