--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2008,15 +2008,9 @@
             /// Content.
             > div:first-child:not(#z) {
                 margin: 4px 0 8px 66px;
+                box-shadow: inner;
                 c: 0 0 hl;
-                div[role] { c: 0 0 hl }
                 /.quoted-mention { c: cm }
-                /// Add border around replies.
-                [class *= 'bg-color'] + [dir] {
-                    rad: 0 6px 6px 0 i;
-                    box-shadow: inset 0 0 0 1px bd;
-                }
-                .EebcE + div { box-shadow: inner }
             }
             /// Close button.
             div:last-child {
@@ -2026,6 +2020,7 @@
                 [role = 'button'] > span > svg {
                     padding: 16px;
                     border-radius: 6px;
+                    fill-opacity: 0.55;
                 }
             }
         }
