chat: fix context menu for embeds in groups/DMs

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1758,6 +1758,14 @@
                 /// Fix context menu for local RTL layouts.
                 &._38wik._2Nkc4 { background: linear-gradient(270deg, t, left 80%) i }
             }
+            > div > span:nth-last-child(2) > div[style] {
+                /// Embedded links in groups.
+                &.jZ4tp._1i1U7 {
+                    background: linear-gradient(90deg, t, left 80%) i;
+                    /// Embedded links in DMs.
+                    &._2Cju4 { background: none i; c: 0 0 bg }
+                }
+            }
             /// Replies.
             ._1iJeo {
                 c: 0 0 bg;
