chat: tweak video length timestamp

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1697,12 +1697,12 @@
                 + ._1uFFm, + .GbMip {
                     padding: 2px 5px;
                     rad: 7.5px;
-                    c: 0 0 hl;
+                    c: 0 0 bg;
                 }
             }
             /// Videos -> Timestamp background.
             .video-thumb {
-                ._1Ppwx {
+                ._1Ppwx, /._2G09- > ._2Pjvv {
                     padding: 2px 5px;
                     rad: 7.5px;
                     c: fg 0 bg;
