chat: fix remaining context menus

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1763,7 +1763,7 @@
                 &.jZ4tp._1i1U7 {
                     background: linear-gradient(90deg, t, left 80%) i;
                     /// Embedded links in DMs.
-                    &._2Cju4 { background: none i; c: 0 0 bg }
+                    &._2Cju4 { background: none i }
                 }
             }
             /// Replies.
@@ -1821,9 +1821,9 @@
             /// Context menu -> Forwarded messages.
             > div > span:nth-last-child(2) > div[style] {
                 /// Embedded links.
-                &._1i1U7 { background: linear-gradient(90deg, t, bg 60%) i }
+                &._1i1U7 { background: linear-gradient(90deg, t, right 60%) i }
                 /// Files.
-                &.jZ4tp { background: linear-gradient(90deg, t, right 80%) i }
+                &._2Cju4 { background: none i }
             }
             /// Replies.
             ._1iJeo {
@@ -1844,7 +1844,7 @@
             c: fg 0 hl;
         }
         /// Input.
-        ._7HWvs { c: cm }
+        ._7HWvs, ._2n7FA { c: cm }
         .CzI8E { c: 0 ac }
         /// Alert.
         ._1qE6k {
